#1436: XJC Task fails to find itself from maven when fork=true
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>